# OperatingSystemsAssignments

./: README.md
1_LinuxBasic/: practices.sh
2_BashScripting/: Practice4.sh  Teacher_optional_cpuLoad.sh
2_bash_scripting/: BashAccess.txt  Gozaresh_Optioan1.sh  Practice1.sh  Practice2.sh  Practice3.sh  Teacher_optional.sh
3_kernel_modules/five_struct/: .cache.mk  .five_struct.ko.cmd  .five_struct.mod.o.cmd  .five_struct.o.cmd  Makefile  five_struct.c  five_struct.ko  five_struct.mod.c  modules.order
3_kernel_modules/hashtable/: .cache.mk  .hashtable.ko.cmd  .hashtable.mod.o.cmd  .hashtable.o.cmd  Makefile  hashtable.c  hashtable.ko  hashtable.mod.c  modules.order
3_kernel_modules/param_module/: .cache.mk  .module_with_param.ko.cmd  .module_with_param.mod.o.cmd  .module_with_param.o.cmd  Makefile  module_with_param.c  module_with_param.ko  module_with_param.mod.c  modules.order
3_kernel_modules/process_info_module/: .cache.mk  .process_info.ko.cmd  .process_info.mod.o.cmd  .process_info.o.cmd  Makefile  modules.order  process_info.c  process_info.c.save  process_info.ko  process_info.mod.c
3_kernel_modules/simple_module/: .cache.mk  .simple_module.ko.cmd  .simple_module.mod.o.cmd  .simple_module.o.cmd  Makefile  modules.order  simple_module.c  simple_module.c.save  simple_module.ko  simple_module.mod.c
3_kernel_modules/struct_in_kernel/: .cache.mk  .struct.ko.cmd  .struct.mod.o.cmd  .struct.o.cmd  Makefile  modules.order  struct.c  struct.ko  (+1 more)
4_proccessManagment/: read.c  write.c
4_proccessManagment/‬‬‫‪Warehouse‬‬‪Management/: CMakeLists.txt  main
(+29 files in other folders)
